<resources>
    <string name="app_name">writeMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="note">Note</string>
    <string name="save_note">save note</string>
    <string name="edit_note">Edit Note</string>
    <string name="writeme">writeMe</string>
    <string name="take_notes_easily">take notes easily</string>
</resources>